--- a/blender_docs/locale/vi/LC_MESSAGES/render/freestyle/parameter_editor/line_style/tabs.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/render/freestyle/parameter_editor/line_style/tabs.po
@@ -22,7 +22,7 @@ msgstr ""
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:4
 msgid "Tabs"
-msgstr "Các Bảng Đề Mục -- Tabs"
+msgstr "Các Bảng Mục -- Tabs"
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:7
 msgid "Stroke"
@@ -38,7 +38,7 @@ msgstr ""
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:16
 msgid "Chaining"
-msgstr "Tạo Dây Chuyền -- Chaining"
+msgstr "Chuyền Nối -- Chaining"
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:20
 msgid "Chaining."
@@ -87,7 +87,7 @@ msgstr ""
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:41
 msgid "Splitting"
-msgstr "-- Splitting"
+msgstr "Tách Phân -- Splitting"
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:45
 msgid "Splitting."
@@ -101,7 +101,7 @@ msgstr ""
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:49
 msgid "Min, Max 2D Angle"
-msgstr " -- Min, Max 2D Angle"
+msgstr "Góc 2D Tối thiểu, Tối đa -- Min, Max 2D Angle"
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:50
 msgid ""
@@ -127,7 +127,7 @@ msgstr ""
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:61
 msgid "Split Dash, Gap"
-msgstr " -- Split Dash, Gap"
+msgstr "Tách Gạch Ngang -- Split Dash, Gap"
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:57
 msgid ""
@@ -155,7 +155,7 @@ msgstr ""
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:79
 msgid "Sort key"
-msgstr " -- Sort key"
+msgstr "Khóa sắp xếp -- Sort key"
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:73
 msgid "A sort key is used to determine the stacking order of lines."
@@ -163,7 +163,7 @@ msgstr ""
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:75
 msgid "Distance from camera"
-msgstr "-- Distance from camera"
+msgstr "Khoảng cách từ máy quay phim -- Distance from camera"
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:76
 msgid "Lines closer to the camera lie on top of further lines."
@@ -179,7 +179,7 @@ msgstr ""
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:79
 msgid "Projected X, Y"
-msgstr "-- Projected X, Y"
+msgstr "X, Y Phóng Chiếu -- Projected X, Y"
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:80
 msgid "Sort by the projected X or Y value in the image coordinate system."
@@ -259,7 +259,7 @@ msgstr ""
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:110
 msgid "Minimal, Maximal 2D Length"
-msgstr " -- Minimal, Maximal 2D Length"
+msgstr "Chiều Dài 2D Tối thiểu, Tối đa -- Minimal, Maximal 2D Length"
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:111
 msgid "Chains longer and/or shorter than *2D Length*."
@@ -275,7 +275,7 @@ msgstr ""
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:117
 msgid "Caps"
-msgstr "Đầu -- Caps"
+msgstr "Nắp Đầu -- Caps"
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:121
 msgid "Line tip caps."
@@ -318,7 +318,7 @@ msgstr ""
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:139
 msgid "Dashed Line"
-msgstr "Nét Gạch Nối -- Dashed Line"
+msgstr "Đường Gạch Ngang -- Dashed Line"
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:143
 msgid "Dashes Line UI."
@@ -377,7 +377,7 @@ msgstr ""
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:181
 msgid "Base Transparency"
-msgstr " -- Base Transparency"
+msgstr "Độ Trong  -- Base Transparency"
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:180
 msgid "The base alpha for this line style."
@@ -393,11 +393,11 @@ msgstr ""
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:191
 msgid "Base Thickness"
-msgstr " -- Base Thickness"
+msgstr "Chiều Dày Cơ Bản -- Base Thickness"
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:191
 msgid "The base thickness for this line style."
-msgstr ""
+msgstr "Chiều dày cơ bản cho kiểu đường nét này."
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:204
 msgid "Thickness Position"
@@ -478,7 +478,7 @@ msgstr ""
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:232
 msgid "Use Nodes/Textures"
-msgstr " -- Use Nodes/Textures"
+msgstr "Sử Dụng Nút/Chất Liệu -- Use Nodes/Textures"
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:231
 msgid ""
@@ -497,7 +497,7 @@ msgstr ""
 
 #: ../../<generated>:1
 msgid "Go to LineStyle Textures"
-msgstr " -- Go to LineStyle Textures"
+msgstr "Chất Liệu Phong Cách Đường Nét -- Go to LineStyle Textures"
 
 #: ../../manual/render/freestyle/parameter_editor/line_style/tabs.rst:237
 msgid ""
