--- a/blender_docs/locale/vi/LC_MESSAGES/render/output/metadata.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/render/output/metadata.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-07 01:52+0000\n"
+"PO-Revision-Date: 2018-12-18 12:57+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -25,7 +25,7 @@ msgstr "Siêu Dữ Liệu -- Metadata"
 
 #: ../../manual/render/output/metadata.rst:8
 msgid "Metadata panel."
-msgstr ""
+msgstr "Bảng Siêu Dữ Liệu."
 
 #: ../../manual/render/output/metadata.rst:10
 msgid ""
@@ -49,7 +49,7 @@ msgstr ""
 
 #: ../../manual/render/output/metadata.rst:20
 msgid "Stamp Text Color"
-msgstr "-- Stamp Text Color"
+msgstr "Màu của Văn Bản Dấu Đóng -- Stamp Text Color"
 
 #: ../../manual/render/output/metadata.rst:21
 msgid "Set the color and alpha of the stamp text."
@@ -57,7 +57,7 @@ msgstr ""
 
 #: ../../manual/render/output/metadata.rst:22
 msgid "Stamp Background"
-msgstr "-- Stamp Background"
+msgstr "Nền của Dấu Đóng -- Stamp Background"
 
 #: ../../manual/render/output/metadata.rst:23
 msgid "Set the color and alpha of the color behind the text."
@@ -107,7 +107,7 @@ msgstr ""
 
 #: ../../manual/render/output/metadata.rst:39
 msgid "Render Time"
-msgstr " -- Render Time"
+msgstr "Thời Gian Kết Xuất -- Render Time"
 
 #: ../../manual/render/output/metadata.rst:40
 msgid "Includes the render time."
@@ -197,7 +197,7 @@ msgstr ""
 
 #: ../../manual/render/output/metadata.rst:70
 msgid "Sequence Strip"
-msgstr " -- Sequence Strip"
+msgstr "Dải Trình tự -- Sequence Strip"
 
 #: ../../manual/render/output/metadata.rst:69
 msgid "Includes the name of the foreground sequence strip."
