--- a/blender_docs/locale/vi/LC_MESSAGES/render/post_process/color_management.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/render/post_process/color_management.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-07 01:52+0000\n"
+"PO-Revision-Date: 2018-12-18 12:57+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -33,7 +33,7 @@ msgstr ""
 
 #: ../../manual/render/post_process/color_management.rst:16
 msgid "Different views and exposures of the same render."
-msgstr ""
+msgstr "Những cách nhìn và độ phơi sáng của cùng một bản kết xuất."
 
 #: ../../manual/render/post_process/color_management.rst:18
 msgid ""
@@ -46,7 +46,7 @@ msgstr ""
 
 #: ../../manual/render/post_process/color_management.rst:25
 msgid "Scene Linear Color Space"
-msgstr "-- Scene Linear Color Space"
+msgstr "Không Gian Màu Sắc Tuyến Tính của Cảnh -- Scene Linear Color Space"
 
 #: ../../manual/render/post_process/color_management.rst:27
 msgid ""
@@ -112,7 +112,7 @@ msgstr ""
 
 #: ../../manual/render/post_process/color_management.rst:78
 msgid "Display Device"
-msgstr "Thiết bị Hiển Thị -- Display Device"
+msgstr "Thiết Bị Hiển Thị -- Display Device"
 
 #: ../../manual/render/post_process/color_management.rst:69
 msgid "The device that the image is being viewed on."
@@ -181,7 +181,7 @@ msgstr ""
 
 #: ../../manual/render/post_process/color_management.rst:104
 msgid "Filmic"
-msgstr "-- Filmic"
+msgstr "Giống Phim -- Filmic"
 
 #: ../../manual/render/post_process/color_management.rst:104
 msgid ""
@@ -192,7 +192,7 @@ msgstr ""
 
 #: ../../manual/render/post_process/color_management.rst:106
 msgid "RRT"
-msgstr "-- RRT"
+msgstr "Biến Hóa Kết Xuất Tham Chiếu -- RRT"
 
 #: ../../manual/render/post_process/color_management.rst:107
 msgid "Uses the ACES Reference Rendering Transform, to simulate a film-like look."
@@ -211,7 +211,7 @@ msgstr ""
 
 #: ../../manual/render/post_process/color_management.rst:113
 msgid "Raw"
-msgstr "-- Raw"
+msgstr "Dữ Liệu Nguyên Thủy -- Raw"
 
 #: ../../manual/render/post_process/color_management.rst:113
 msgid ""
@@ -232,7 +232,7 @@ msgstr ""
 
 #: ../../manual/render/post_process/color_management.rst:118
 msgid "False Color"
-msgstr "-- False Color"
+msgstr "Màu Sắc Giả Tạo -- False Color"
 
 #: ../../manual/render/post_process/color_management.rst:119
 msgid "Shows a heat map of image intensities, to visualize the dynamic range."
@@ -362,7 +362,7 @@ msgstr ""
 
 #: ../../manual/render/post_process/color_management.rst:185
 msgid "View as Render"
-msgstr "Hiển Thị như Bản Kết Xuất -- View as Render"
+msgstr "Hiển Thị như Kết Xuất -- View as Render"
 
 #: ../../manual/render/post_process/color_management.rst:185
 msgid ""
@@ -373,7 +373,7 @@ msgstr ""
 
 #: ../../manual/render/post_process/color_management.rst:190
 msgid "Save as Render"
-msgstr " -- Save as Render"
+msgstr "Lưu như Kết Xuất -- Save as Render"
 
 #: ../../manual/render/post_process/color_management.rst:188
 msgid ""
@@ -384,7 +384,7 @@ msgstr ""
 
 #: ../../manual/render/post_process/color_management.rst:193
 msgid "OpenColorIO Configuration"
-msgstr "-- OpenColorIO Configuration"
+msgstr "Cấu hình OpenColorIO -- OpenColorIO Configuration"
 
 #: ../../manual/render/post_process/color_management.rst:195
 msgid ""
@@ -412,7 +412,7 @@ msgstr ""
 
 #: ../../manual/render/post_process/color_management.rst:209
 msgid "scene_linear"
-msgstr " -- scene_linear"
+msgstr "Tuyến Tính theo Cảnh -- scene_linear"
 
 #: ../../manual/render/post_process/color_management.rst:210
 msgid ""
@@ -422,7 +422,7 @@ msgstr ""
 
 #: ../../manual/render/post_process/color_management.rst:211
 msgid "default_sequencer"
-msgstr " -- default_sequencer"
+msgstr "Mặc Định của Trình Phối Hình -- default_sequencer"
 
 #: ../../manual/render/post_process/color_management.rst:212
 msgid "Default color space for the Sequencer, *scene_linear* if not specified."
@@ -430,7 +430,7 @@ msgstr ""
 
 #: ../../manual/render/post_process/color_management.rst:213
 msgid "default_byte"
-msgstr " -- default_byte"
+msgstr "Mặc Định Byte -- default_byte"
 
 #: ../../manual/render/post_process/color_management.rst:214
 msgid ""
@@ -440,7 +440,7 @@ msgstr ""
 
 #: ../../manual/render/post_process/color_management.rst:216
 msgid "default_float"
-msgstr " -- default_float"
+msgstr "Mặc Định Số Thật Dấu Phẩy Động (Float) -- default_float"
 
 #: ../../manual/render/post_process/color_management.rst:216
 msgid ""
