--- a/blender_docs/locale/vi/LC_MESSAGES/rigging/armatures/bones/editing/transform.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/rigging/armatures/bones/editing/transform.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-07 02:04+0000\n"
-"PO-Revision-Date: 2018-12-07 02:06+0000\n"
+"PO-Revision-Date: 2018-12-18 12:57+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
@@ -234,7 +234,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/bones/editing/transform.rst:146
 msgid "ToDo <2.72."
-msgstr ""
+msgstr "Nội dung cần viết thêm <2.72"
 
 #: ../../manual/rigging/armatures/bones/editing/transform.rst:152
 msgid "Bone Roll"
@@ -254,7 +254,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/bones/editing/transform.rst:162
 msgid "Set Bone Roll"
-msgstr "-- Set Bone Roll"
+msgstr "Lăn Xương -- Set Bone Roll"
 
 #: ../../manual/rigging/armatures/bones/editing/transform.rst:168
 msgid ":menuselection:`Armature --> Bone Roll --> Set`"
@@ -272,7 +272,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/bones/editing/transform.rst:175
 msgid "Recalculate Bone Roll"
-msgstr "-- Recalculate Bone Roll"
+msgstr "Tính Toán Lại Xương Lăn -- Recalculate Bone Roll"
 
 #: ../../manual/rigging/armatures/bones/editing/transform.rst:181
 msgid ":menuselection:`Armature --> Bone Roll --> Recalculate`"
@@ -284,11 +284,11 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/bones/editing/transform.rst:197
 msgid "Axis Orientation"
-msgstr " -- Axis Orientation"
+msgstr "Định Hướng của Trục -- Axis Orientation"
 
 #: ../../manual/rigging/armatures/bones/editing/transform.rst:187
 msgid "Local Tangent"
-msgstr "-- Local Tangent"
+msgstr "Tiếp Tuyến Địa Phương -- Local Tangent"
 
 #: ../../manual/rigging/armatures/bones/editing/transform.rst:186
 msgid "Align roll relative to the axis defined by the bone and its parent."
@@ -300,7 +300,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/bones/editing/transform.rst:191
 msgid "Global Axis"
-msgstr "-- Global Axis"
+msgstr "Trục Toàn Cầu -- Global Axis"
 
 #: ../../manual/rigging/armatures/bones/editing/transform.rst:190
 msgid "Align roll to global X, Y, Z axis."
