--- a/blender_docs/locale/vi/LC_MESSAGES/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-17 22:20+0000\n"
-"PO-Revision-Date: 2018-12-07 01:52+0000\n"
+"PO-Revision-Date: 2018-12-18 12:57+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
@@ -48,7 +48,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:22
 msgid "Automatic IK"
-msgstr "-- Automatic IK"
+msgstr "IK Tự Động -- Automatic IK"
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:24
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:65
@@ -106,7 +106,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:52
 msgid "IK Constraints"
-msgstr "-- IK Constraints"
+msgstr "Ràng Buộc IK -- IK Constraints"
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:54
 msgid ""
@@ -125,7 +125,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:63
 msgid "Armature IK Panel"
-msgstr "-- Armature IK Panel"
+msgstr "Bảng IK của Cốt -- Armature IK Panel"
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:69
 msgid ":menuselection:`Properties editor --> Armature --> Inverse Kinematics`"
@@ -212,7 +212,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:121
 msgid ":abbr:`SDLS (Selective Damped Least Square)`"
-msgstr ""
+msgstr "Bình phương tối thiểu tuyển hãm -- :abbr:`SDLS (Selective Damped Least Square)`"
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:119
 msgid ""
@@ -225,7 +225,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:136
 msgid ":abbr:`DLS (Damped Least Square)`"
-msgstr ""
+msgstr ":abbr:`Bình phương tối thiểu hãm -- DLS (Damped Least Square)`"
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:124
 msgid ""
@@ -235,7 +235,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:127
 msgid "Damping Max"
-msgstr "-- Damping Max"
+msgstr "Tối Đa của Lực Hãm -- Damping Max"
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:127
 msgid ""
@@ -246,7 +246,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:131
 msgid "Damping Epsilon"
-msgstr "-- Damping Epsilon"
+msgstr "Epsilon của Lực Hãm -- Damping Epsilon"
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:130
 msgid ""
@@ -346,7 +346,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:193
 msgid "Auto Step"
-msgstr " -- Auto Step"
+msgstr "Tự Động Tạo Phân Bước -- Auto Step"
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:182
 msgid ""
@@ -430,7 +430,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:223
 msgid "Bone IK Panel"
-msgstr "-- Bone IK Panel"
+msgstr "Bảng IK của Xương -- Bone IK Panel"
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:229
 msgid ":menuselection:`Properties editor --> Bone --> Inverse Kinematics`"
@@ -516,7 +516,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:272
 msgid "Arm Rig Example"
-msgstr "-- Arm Rig Example"
+msgstr "Ví Dụ Dàn Dựng Cánh Tay -- Arm Rig Example"
 
 #: ../../manual/rigging/armatures/posing/bone_constraints/inverse_kinematics/introduction.rst:274
 msgid ""
