--- a/blender_docs/locale/vi/LC_MESSAGES/rigging/constraints/tracking/ik_solver.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/rigging/constraints/tracking/ik_solver.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-07 02:04+0000\n"
-"PO-Revision-Date: 2018-12-07 02:06+0000\n"
+"PO-Revision-Date: 2018-12-18 12:57+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
@@ -22,7 +22,7 @@ msgstr ""
 
 #: ../../manual/rigging/constraints/tracking/ik_solver.rst:5
 msgid "IK Solver Constraint"
-msgstr " -- IK Solver Constraint"
+msgstr "Ràng Buộc Bộ Giải Nghiệm IK -- IK Solver Constraint"
 
 #: ../../manual/rigging/constraints/tracking/ik_solver.rst:7
 msgid ""
@@ -157,7 +157,7 @@ msgstr ""
 
 #: ../../manual/rigging/constraints/tracking/ik_solver.rst:68
 msgid "Position/Rotation Locking"
-msgstr "-- Position/Rotation Locking"
+msgstr "Khóa Vị Trí/Xoay Chiều -- Position/Rotation Locking"
 
 #: ../../manual/rigging/constraints/tracking/ik_solver.rst:60
 msgid ""
