--- a/blender_docs/locale/vi/LC_MESSAGES/sculpt_paint/painting/texture_paint/slots_mask.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/sculpt_paint/painting/texture_paint/slots_mask.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-07 02:04+0000\n"
-"PO-Revision-Date: 2018-12-07 02:06+0000\n"
+"PO-Revision-Date: 2018-12-18 12:57+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
@@ -22,7 +22,7 @@ msgstr ""
 
 #: ../../manual/sculpt_paint/painting/texture_paint/slots_mask.rst:4
 msgid "Slots & Mask"
-msgstr "-- Slots & Mask"
+msgstr "Khe & Màn Chắn -- Slots & Mask"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/slots_mask.rst:6
 msgid "The *Slots* tab in the *Tool Shelf* of the 3D View."
@@ -48,7 +48,7 @@ msgstr ""
 
 #: ../../manual/sculpt_paint/painting/texture_paint/slots_mask.rst:66
 msgid "Painting Mode"
-msgstr " -- Painting Mode"
+msgstr "Chế Độ Sơn Vẽ -- Painting Mode"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/slots_mask.rst:23
 msgid "The slot system includes two painting modes:"
@@ -66,7 +66,7 @@ msgstr ""
 
 #: ../../manual/sculpt_paint/painting/texture_paint/slots_mask.rst:31
 msgid "Canvas Image"
-msgstr "-- Canvas Image"
+msgstr "Hình Ảnh cho Toan Nền -- Canvas Image"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/slots_mask.rst:29
 msgid "Allows you to select the image used as a canvas."
@@ -108,7 +108,7 @@ msgstr ""
 
 #: ../../manual/sculpt_paint/painting/texture_paint/slots_mask.rst:45
 msgid "Available Paint Slots"
-msgstr "-- Available Paint Slots"
+msgstr "Các Khe Sơn Vẽ Sử Dụng Được -- Available Paint Slots"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/slots_mask.rst:44
 msgid ""
@@ -136,7 +136,7 @@ msgstr ""
 
 #: ../../manual/sculpt_paint/painting/texture_paint/slots_mask.rst:60
 msgid "Add/Remove Texture Paint Slot"
-msgstr "-- Add/Remove Texture Paint Slot"
+msgstr "Cộng Thêm/Xóa Bỏ Khe Sơn Vẽ Chất Liệu -- Add/Remove Texture Paint Slot"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/slots_mask.rst:61
 msgid ""
@@ -198,7 +198,7 @@ msgstr ""
 
 #: ../../<generated>:1
 msgid "Invert Stencil (black/white icon)"
-msgstr " -- Invert Stencil (black/white icon)"
+msgstr "Đảo Ngược Khuôn In (biểu tượng trắng/đen) -- Invert Stencil (black/white icon)"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/slots_mask.rst:90
 msgid "Inverts the mask."
