--- a/blender_docs/locale/vi/LC_MESSAGES/sculpt_paint/painting/texture_paint/tools.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/sculpt_paint/painting/texture_paint/tools.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-07 02:04+0000\n"
-"PO-Revision-Date: 2018-12-07 02:06+0000\n"
+"PO-Revision-Date: 2018-12-18 12:57+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
@@ -47,11 +47,11 @@ msgstr ""
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:22
 msgid "Brush Types"
-msgstr "-- Brush Types"
+msgstr "Các Thể Loại Bút Lông -- Brush Types"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:25
 msgid "Texture Draw"
-msgstr "-- Texture Draw"
+msgstr "Vẽ Chất Liệu -- Texture Draw"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:27
 msgid "The normal brush, paints a swath of color. See `Common`_ settings below."
@@ -122,7 +122,7 @@ msgstr ""
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:55
 msgid "Fill Threshold (2D only)"
-msgstr " -- Fill Threshold (2D only)"
+msgstr "Ngưỡng Tô Đầy (duy 2D) -- Fill Threshold (2D only)"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:53
 msgid ""
@@ -145,7 +145,7 @@ msgstr ""
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:67
 msgid "Gradient Fill Mode"
-msgstr "Chế Độ Phủ Dốc Màu -- Gradient Fill Mode"
+msgstr "Chế Độ Tô Dốc Màu -- Gradient Fill Mode"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:67
 msgid "Linear, Radial"
@@ -207,7 +207,7 @@ msgstr ""
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:99
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:107
 msgid "Kernel Radius (2D only)"
-msgstr "-- Kernel Radius (2D only)"
+msgstr "Bán Kính của Nhân Tính Toán -- Kernel Radius (2D only)"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:100
 msgid "Blur radius in pixels."
@@ -291,7 +291,7 @@ msgstr ""
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:137
 msgid "Clone from Paint Slot (3D projective only)"
-msgstr " -- Clone from Paint Slot (3D projective only)"
+msgstr "Rập Khuôn từ Khe Sơn (duy dự phóng 3D)-- Clone from Paint Slot (3D projective only)"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:134
 msgid ""
@@ -309,7 +309,7 @@ msgstr ""
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:139
 msgid "Image (2D only)"
-msgstr " -- Image (2D only)"
+msgstr "Hình Ảnh (duy 2D) -- Image (2D only)"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:140
 msgid "Image used as a clone source."
@@ -317,7 +317,7 @@ msgstr ""
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:143
 msgid "Alpha (2D only)"
-msgstr " -- Alpha (2D only)"
+msgstr "Alpha (Duy 2D) -- Alpha (2D only)"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:142
 msgid "Opacity of the clone image display."
@@ -347,7 +347,7 @@ msgstr ""
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:156
 msgid "Flip (cycle icon) :kbd:`X`"
-msgstr "-- Flip (cycle icon) :kbd:`X`"
+msgstr "Đảo Lật (biểu tượng quay vòng)-- Flip (cycle icon) :kbd:`X`"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:157
 msgid "Swaps the foreground and background color."
@@ -371,7 +371,7 @@ msgstr ""
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:163
 msgid "Space Attenuation (padlock icon)"
-msgstr "-- Space Attenuation (padlock icon)"
+msgstr "Suy Giảm -- Space Attenuation (padlock icon)"
 
 #: ../../manual/sculpt_paint/painting/texture_paint/tools.rst:164
 msgid "Attenuate the brush strength according to spacing."
