--- a/blender_docs/locale/vi/LC_MESSAGES/rigging/armatures/properties/pose_library.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/rigging/armatures/properties/pose_library.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-07 01:52+0000\n"
+"PO-Revision-Date: 2018-12-18 12:57+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/properties/pose_library.rst:5
 msgid "Pose Library Panel"
-msgstr "-- Pose Library Panel"
+msgstr "Bảng Thư Viện Tư Thế -- Pose Library Panel"
 
 #: ../../manual/rigging/armatures/properties/pose_library.rst:7
 #: ../../manual/rigging/armatures/properties/pose_library.rst:53
@@ -66,7 +66,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/properties/pose_library.rst:46
 msgid "Pose Libraries"
-msgstr " -- Pose Libraries"
+msgstr "Thư Viện Tư Thế -- Pose Libraries"
 
 #: ../../manual/rigging/armatures/properties/pose_library.rst:25
 msgid "A :ref:`ui-list-view` of poses for the active Pose Library."
@@ -74,7 +74,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/properties/pose_library.rst:36
 msgid "Add ``+``"
-msgstr "Cộng Thêm ``+`` -- Add ``+``"
+msgstr "Cộng Thêm -- Add ``+``"
 
 #: ../../manual/rigging/armatures/properties/pose_library.rst:28
 msgid ""
@@ -95,7 +95,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/properties/pose_library.rst:34
 msgid "Add New (Current Frame)."
-msgstr ""
+msgstr "Thêm Cái Mới (Khung Hình Hiện Tại) -- Add New (Current Frame)"
 
 #: ../../manual/rigging/armatures/properties/pose_library.rst:34
 msgid ""
@@ -116,7 +116,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/properties/pose_library.rst:38
 msgid "Apply Pose (magnifying glass icon)"
-msgstr "-- Apply Pose (magnifying glass icon)"
+msgstr "Áp Dụng Tư Thế (biểu tượng kính phóng đại) -- Apply Pose (magnifying glass icon)"
 
 #: ../../manual/rigging/armatures/properties/pose_library.rst:39
 msgid "Applies the active pose to the selected pose bones."
@@ -124,7 +124,7 @@ msgstr ""
 
 #: ../../manual/rigging/armatures/properties/pose_library.rst:42
 msgid "Sanitize Action (livesaver icon)"
-msgstr "-- Sanitize Action (livesaver icon)"
+msgstr "Chỉnh Đốn Hành Động (biểu tượng phao cứu sinh) -- Sanitize Action (livesaver icon)"
 
 #: ../../manual/rigging/armatures/properties/pose_library.rst:41
 msgid ""
