Commit to testing_branch

--- a/blender_docs/locale/vi/LC_MESSAGES/addons/io_web3d.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/addons/io_web3d.po
@@ -169,7 +169,7 @@ msgstr "Thứ Bậc -- Hierarchy"
 
 #: ../../manual/addons/io_web3d.rst:57
 msgid "Named decorations"
-msgstr "-- Named decorations"
+msgstr "Trang Trí Tên -- Named decorations"
 
 #: ../../manual/addons/io_web3d.rst:59
 msgid "H3D Extensions"
