Added some section title translations

--- a/blender_docs/locale/vi/LC_MESSAGES/animation/drivers/drivers_panel.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/animation/drivers/drivers_panel.po
@@ -255,7 +255,7 @@ msgstr ""
 #: ../../manual/animation/drivers/drivers_panel.rst:97
 #: ../../manual/animation/drivers/drivers_panel.rst:105
 msgid "ID"
-msgstr "-- ID"
+msgstr "Chỉ Danh -- ID"
 
 #: ../../manual/animation/drivers/drivers_panel.rst:98
 msgid "The ID of the ID-block type. For example: \"Material.001\"."
