--- a/blender_docs/locale/vi/LC_MESSAGES/animation/drivers/introduction.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/animation/drivers/introduction.po
@@ -36,7 +36,7 @@ msgstr ""
 
 #: ../../manual/animation/drivers/introduction.rst:15
 msgid "Adding & Removing"
-msgstr "-- Adding & Removing"
+msgstr "Cộng Thêm & Xóa Bỏ -- Adding & Removing"
 
 #: ../../manual/animation/drivers/introduction.rst:17
 msgid ""
