--- a/blender_docs/locale/vi/LC_MESSAGES/animation/keyframes/keying_sets.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/animation/keyframes/keying_sets.po
@@ -141,7 +141,7 @@ msgstr ""
 #: ../../manual/animation/keyframes/keying_sets.rst:63
 #: ../../manual/animation/keyframes/keying_sets.rst:117
 msgid "Only Needed"
-msgstr "-- Only Needed"
+msgstr "Duy Cần Thiết -- Only Needed"
 
 #: ../../manual/animation/keyframes/keying_sets.rst:64
 #: ../../manual/animation/keyframes/keying_sets.rst:118
