Updated changes from svn source

--- a/blender_docs/locale/vi/LC_MESSAGES/animation/motion_paths.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/animation/motion_paths.po
@@ -170,7 +170,7 @@ msgstr "Phạm Vi Hiển Thị -- Display Range"
 
 #: ../../manual/animation/motion_paths.rst:71
 msgid "Before, After"
-msgstr "-- Before, After"
+msgstr "Trước, Sau -- Before, After"
 
 #: ../../manual/animation/motion_paths.rst:71
 msgid ""
@@ -206,7 +206,7 @@ msgstr "Bộ đệm nhớ/Bộ đệm nhớ cho Xương -- Cache/Cache for Bone"
 
 #: ../../manual/animation/motion_paths.rst:83
 msgid "From, To"
-msgstr "-- From, To"
+msgstr "Từ, Tới -- From, To"
 
 #: ../../manual/animation/motion_paths.rst:83
 msgid ""
@@ -289,7 +289,7 @@ msgstr ""
 
 #: ../../manual/animation/motion_paths.rst:116
 msgid "Thickness, Color (color wheel icon)"
-msgstr "-- Thickness, Color (color wheel icon)"
+msgstr "Độ Dày, Màu Sắc (biểu tượng vòng tròn màu sắc)-- Thickness, Color (color wheel icon)"
 
 #: ../../manual/animation/motion_paths.rst:117
 msgid "Customizable thickness and color for the lines."
