--- a/blender_docs/locale/vi/LC_MESSAGES/animation/shape_keys/shape_keys_panel.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/animation/shape_keys/shape_keys_panel.po
@@ -228,7 +228,7 @@ msgstr ""
 
 #: ../../manual/animation/shape_keys/shape_keys_panel.rst:87
 msgid "Absolute Shape Keys"
-msgstr "-- Absolute Shape Keys"
+msgstr "Hình Mẫu Tuyệt Đối -- Absolute Shape Keys"
 
 #: ../../manual/animation/shape_keys/shape_keys_panel.rst:89
 msgid ""
