--- a/blender_docs/locale/vi/LC_MESSAGES/animation/shape_keys/workflow.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/animation/shape_keys/workflow.po
@@ -79,7 +79,7 @@ msgstr ""
 
 #: ../../manual/animation/shape_keys/workflow.rst:27
 msgid "Absolute Shape Keys"
-msgstr "-- Absolute Shape Keys"
+msgstr "Hình Mẫu Tuyệt Đối -- Absolute Shape Keys"
 
 #: ../../manual/animation/shape_keys/workflow.rst:29
 msgid "Add sequence of shape keys as described above for relative shape keys."
