--- a/blender_docs/locale/vi/LC_MESSAGES/compositing/types/converter/alpha_convert.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/compositing/types/converter/alpha_convert.po
@@ -72,7 +72,7 @@ msgstr "Ánh Xạ -- Mapping"
 
 #: ../../manual/compositing/types/converter/alpha_convert.rst:40
 msgid "Straight to Premul, Premul to Straight"
-msgstr "-- Straight to Premul, Premul to Straight"
+msgstr "Thẳng sang Nhân Trước, Nhân Trước sang Thẳng -- Straight to Premul, Premul to Straight"
 
 #: ../../manual/compositing/types/converter/alpha_convert.rst:38
 msgid ""
