--- a/blender_docs/locale/vi/LC_MESSAGES/compositing/types/distort/scale.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/compositing/types/distort/scale.po
@@ -104,7 +104,7 @@ msgstr ""
 
 #: ../../manual/compositing/types/distort/scale.rst:43
 msgid "Stretch, Fit, Crop"
-msgstr "-- Stretch, Fit, Crop"
+msgstr "Kéo Giãn, Khít Vừa, Cắt Xén -- Stretch, Fit, Crop"
 
 #: ../../manual/compositing/types/distort/scale.rst:42
 msgid ""
