--- a/blender_docs/locale/vi/LC_MESSAGES/animation/keyframes/keying_sets.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/animation/keyframes/keying_sets.po
@@ -172,7 +172,7 @@ msgstr ""
 
 #: ../../manual/animation/keyframes/keying_sets.rst:72
 msgid "Active Keying Set Panel"
-msgstr "-- Active Keying Set Panel"
+msgstr "Bảng Bộ Khóa Đang Hoạt Động -- Active Keying Set Panel"
 
 #: ../../manual/animation/keyframes/keying_sets.rst:78
 msgid ":menuselection:`Scene --> Active Keying Set`"
@@ -226,7 +226,7 @@ msgstr ""
 
 #: ../../manual/animation/keyframes/keying_sets.rst:107
 msgid "Array Target"
-msgstr "-- Array Target"
+msgstr "Mảng Đích -- Array Target"
 
 #: ../../manual/animation/keyframes/keying_sets.rst:107
 msgid ""
@@ -252,7 +252,7 @@ msgstr ""
 
 #: ../../manual/animation/keyframes/keying_sets.rst:126
 msgid "Adding Properties"
-msgstr "-- Adding Properties"
+msgstr "Cộng Thêm Tính Chất -- Adding Properties"
 
 #: ../../manual/animation/keyframes/keying_sets.rst
 msgid "Menu"
