Translated section title lines.

--- a/blender_docs/locale/vi/LC_MESSAGES/compositing/types/filter/vector_blur.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/compositing/types/filter/vector_blur.po
@@ -97,7 +97,7 @@ msgstr ""
 
 #: ../../manual/compositing/types/filter/vector_blur.rst:40
 msgid "Maximum Speed"
-msgstr "-- Maximum Speed"
+msgstr "Tốc Độ Tối Đa -- Maximum Speed"
 
 #: ../../manual/compositing/types/filter/vector_blur.rst:41
 msgid ""
@@ -107,7 +107,7 @@ msgstr ""
 
 #: ../../manual/compositing/types/filter/vector_blur.rst:47
 msgid "Minimum Speed"
-msgstr "-- Minimum Speed"
+msgstr "Tốc Độ Tối Thiểu -- Minimum Speed"
 
 #: ../../manual/compositing/types/filter/vector_blur.rst:43
 msgid ""
