--- a/blender_docs/locale/vi/LC_MESSAGES/compositing/types/matte/ellipse_mask.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/compositing/types/matte/ellipse_mask.po
@@ -96,7 +96,7 @@ msgstr ""
 
 #: ../../manual/compositing/types/matte/ellipse_mask.rst:54
 msgid "Mask Type"
-msgstr "-- Mask Type"
+msgstr "Thể Loại Màn Chắn -- Mask Type"
 
 #: ../../manual/compositing/types/matte/ellipse_mask.rst:38
 msgid "Operation to use against the input mask."
