Translated section title lines.

--- a/blender_docs/locale/vi/LC_MESSAGES/data_system/custom_properties.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/data_system/custom_properties.po
@@ -149,7 +149,7 @@ msgstr ""
 
 #: ../../manual/data_system/custom_properties.rst:70
 msgid "Use Soft Limits"
-msgstr "Dùng Giới Hạn Năng Động -- Use Soft Limits"
+msgstr "Dùng Giới Hạn bằng Phần Mềm -- Use Soft Limits"
 
 #: ../../manual/data_system/custom_properties.rst:65
 msgid ""
@@ -159,7 +159,7 @@ msgstr ""
 
 #: ../../manual/data_system/custom_properties.rst:68
 msgid "Soft Min"
-msgstr "-- Soft Min"
+msgstr "Ph/M Tối Thiểu -- Soft Min"
 
 #: ../../manual/data_system/custom_properties.rst:69
 msgid "The minimum value for the soft limit."
@@ -167,7 +167,7 @@ msgstr ""
 
 #: ../../manual/data_system/custom_properties.rst:70
 msgid "Soft Max"
-msgstr "-- Soft Max"
+msgstr "Ph/M Tối Đa -- Soft Max"
 
 #: ../../manual/data_system/custom_properties.rst:71
 msgid "The maximum value for the soft limit."
