Translated section title lines.

--- a/blender_docs/locale/vi/LC_MESSAGES/data_system/data_blocks.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/data_system/data_blocks.po
@@ -155,11 +155,11 @@ msgstr ""
 
 #: ../../manual/data_system/data_blocks.rst:77
 msgid "Users (Sharing)"
-msgstr "-- Users (Sharing)"
+msgstr "Người Dùng (Dùng Chung)-- Users (Sharing)"
 
 #: ../../manual/data_system/data_blocks.rst:79
 msgid "Many data-blocks can be shared among other data-blocks."
-msgstr ""
+msgstr "Nhiều khối dữ liệu có thể được dùng chung trong các khối dữ liệu khác."
 
 #: ../../manual/data_system/data_blocks.rst:81
 msgid "Examples where sharing data is common:"
@@ -264,7 +264,7 @@ msgstr ""
 
 #: ../../manual/data_system/data_blocks.rst:121
 msgid "Removing Data-Blocks"
-msgstr "-- Removing Data-Blocks"
+msgstr "Xóa Bỏ Khối Dữ Liệu -- Removing Data-Blocks"
 
 #: ../../manual/data_system/data_blocks.rst:123
 msgid ""
