--- a/blender_docs/locale/vi/LC_MESSAGES/data_system/files/import_export.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/data_system/files/import_export.po
@@ -58,7 +58,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/import_export.rst:27
 msgid "Use :abbr:`STL (STereoLithography)`"
-msgstr "-- Use :abbr:`STL (STereoLithography)`"
+msgstr "Sử dụng định dạng `STL <https://en.wikipedia.org/wiki/Stereolithography>`__ -- Use :abbr:`STL (STereoLithography : Thuật In Thạch Bản Lập Thể)`"
 
 #: ../../manual/data_system/files/import_export.rst:27
 msgid ""
@@ -68,7 +68,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/import_export.rst:30
 msgid "Use :abbr:`FBX (Filmbox)`"
-msgstr "-- Use :abbr:`FBX (Filmbox)`"
+msgstr "Sử dụng định dạng `FBX <https://en.wikipedia.org/wiki/FBX>`__  -- Use :abbr:`FBX (Filmbox : Phòng Bán Vé Rạp Phim)`"
 
 #: ../../manual/data_system/files/import_export.rst:30
 msgid ""
@@ -78,7 +78,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/import_export.rst:34
 msgid "Use :abbr:`DAE (Collada)`"
-msgstr "-- Use :abbr:`DAE (Collada)`"
+msgstr "Sử dụng định dạng `DAE <https://www.khronos.org/collada/wiki/DAE_interface>`__ -- Use :abbr:`DAE (DAE = Digital Asset Exchange (Trao Đổi Tài Nguyên Số), Collada = COLLAborative Design Activity (Hoạt Động Thiết Kế Cộng Tác))`"
 
 #: ../../manual/data_system/files/import_export.rst:33
 msgid ""
@@ -89,7 +89,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/import_export.rst:39
 msgid "Use :abbr:`ABC (Alembic)`"
-msgstr "-- Use :abbr:`ABC (Alembic)`"
+msgstr "Sử dụng định dạng `ABC <https://en.wikipedia.org/wiki/Alembic_(computer_graphics)>`__ -- Use :abbr:`ABC (Alembic)`"
 
 #: ../../manual/data_system/files/import_export.rst:37
 msgid ""
