Translated section title lines.

--- a/blender_docs/locale/vi/LC_MESSAGES/data_system/files/media/image_formats.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/data_system/files/media/image_formats.po
@@ -206,7 +206,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/image_formats.rst:93
 msgid "Use OpenEXR"
-msgstr "-- Use OpenEXR"
+msgstr "Sử dụng định dạng `OpenEXR <https://en.wikipedia.org/wiki/OpenEXR>`__ -- Use OpenEXR"
 
 #: ../../manual/data_system/files/media/image_formats.rst:94
 msgid "if you intend to do compositing or color grading on these images."
@@ -214,7 +214,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/image_formats.rst:95
 msgid "Use PNG"
-msgstr "-- Use PNG"
+msgstr "Sử dụng định dạng `PNG <https://en.wikipedia.org/wiki/Portable_Network_Graphics>`__ -- Use PNG"
 
 #: ../../manual/data_system/files/media/image_formats.rst:96
 msgid "if you intend on-screen output or encoding into multiple video formats."
@@ -222,7 +222,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/image_formats.rst:98
 msgid "Use JPEG"
-msgstr "-- Use JPEG"
+msgstr "Sử dụng định dạng `JPEG <https://en.wikipedia.org/wiki/JPEG>`__ -- Use JPEG"
 
 #: ../../manual/data_system/files/media/image_formats.rst:98
 msgid ""
@@ -348,7 +348,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/image_formats.rst:152
 msgid "8 bit (256 levels)"
-msgstr "-- 8 bit (256 levels)"
+msgstr "8 bit (256 cấp bậc) -- 8 bit (256 levels)"
 
 #: ../../manual/data_system/files/media/image_formats.rst:153
 msgid "Most common for on-screen graphics and video."
@@ -366,7 +366,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/image_formats.rst:158
 msgid "16 bit half float"
-msgstr "-- 16 bit half float"
+msgstr "một nửa số thực dấu phẩy động 16 bit -- 16 bit half float"
 
 #: ../../manual/data_system/files/media/image_formats.rst:158
 msgid ""
@@ -376,7 +376,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/image_formats.rst:161
 msgid "32 bit float"
-msgstr "-- 32 bit float"
+msgstr "số thực dấu phẩy động 32 bit -- 32 bit float"
 
 #: ../../manual/data_system/files/media/image_formats.rst:161
 msgid "Highest quality color depth."
@@ -449,7 +449,7 @@ msgstr "Chi Tiết về Định Dạng -- Format Details"
 
 #: ../../manual/data_system/files/media/image_formats.rst:188
 msgid "Cineon & DPX"
-msgstr "-- Cineon & DPX"
+msgstr "`Cineon <https://en.wikipedia.org/wiki/Cineon>`__ & `DPX <https://en.wikipedia.org/wiki/Digital_Picture_Exchange>`__"
 
 #: ../../manual/data_system/files/media/image_formats.rst:190
 msgid ""
@@ -469,7 +469,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/image_formats.rst:200
 msgid "OpenEXR"
-msgstr ""
+msgstr "`OpenEXR <https://en.wikipedia.org/wiki/OpenEXR>`__"
 
 #: ../../manual/data_system/files/media/image_formats.rst:202
 msgid ""
@@ -502,7 +502,7 @@ msgstr ""
 
 #: ../../manual/data_system/files/media/image_formats.rst:218
 msgid "Float (Half), Float (Full)"
-msgstr ""
+msgstr "Float (Một Nửa), Float (Toàn Phần)"
 
 #: ../../manual/data_system/files/media/image_formats.rst:226
 msgid "Codec"
